@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-06-04T00:55:30Z",
-  "count" : 131,
-  "count_minmax" : [ 131, 131 ],
-  "count_decinc" : [ -0, +131 ],
+  "timestamp" : "2024-06-17T00:57:57Z",
+  "count" : 90,
+  "count_minmax" : [ 90, 131 ],
+  "count_decinc" : [ -41, +131 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
