@@ -1,15 +1,10 @@
 {
-  "count": 1743,
+  "count": 1777,
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2024-06-02T00:00:00Z",
-      "count": 54,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-06-03T00:00:00Z",
-      "count": 131,
+      "count": 90,
       "uniques": 3
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2024-06-15T00:00:00Z",
       "count": 130,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-06-16T00:00:00Z",
+      "count": 129,
       "uniques": 2
     }
   ]
